--- a/settings.cfg
+++ b/settings.cfg
@@ -1,11 +1,11 @@
 [Input]
 
-jump="Space (Physical)"
-attack="L (Physical)"
-interact="K (Physical)"
-dash="J (Physical)"
+jump="Z (Physical)"
+attack="C (Physical)"
+interact="X (Physical)"
+dash="Shift (Physical)"
 skip="P (Physical)"
-Up="W (Physical)"
-Left="A (Physical)"
-Right="D (Physical)"
-Down="S (Physical)"
+Up="Up (Physical)"
+Left="Left (Physical)"
+Right="Right (Physical)"
+Down="Down (Physical)"
