started template for control menu

--- a/settings.cfg
+++ b/settings.cfg
@@ -1,11 +1,11 @@
 [Input]
 
-jump="Z (Physical)"
-attack="C (Physical)"
-interact="X (Physical)"
-dash="Shift (Physical)"
-skip="P (Physical)"
-Up="Up (Physical)"
-Left="Left (Physical)"
-Right="Right (Physical)"
-Down="Down (Physical)"
+jump=PackedStringArray("Z (Physical)", "Joypad Button 0 (Bottom Action, Sony Cross, Xbox A, Nintendo B)")
+attack=PackedStringArray("C (Physical)", "Joypad Button 2 (Left Action, Sony Square, Xbox X, Nintendo Y)")
+interact=PackedStringArray("X (Physical)", "Joypad Button 1 (Right Action, Sony Circle, Xbox B, Nintendo A)")
+dash=PackedStringArray("Shift (Physical)", "Joypad Button 10 (Right Shoulder, Sony R1, Xbox RB)")
+skip=PackedStringArray("P (Physical)", "Joypad Button 6 (Start, Xbox Menu, Nintendo +)")
+Up=PackedStringArray("Up (Physical)", "Joypad Motion on Axis 1 (Left Stick Y-Axis, Joystick 0 Y-Axis) with Value -1.00")
+Left=PackedStringArray("Left (Physical)", "Joypad Motion on Axis 0 (Left Stick X-Axis, Joystick 0 X-Axis) with Value -1.00")
+Right=PackedStringArray("Right (Physical)", "Joypad Motion on Axis 0 (Left Stick X-Axis, Joystick 0 X-Axis) with Value 1.00")
+Down=PackedStringArray("Down (Physical)", "Joypad Motion on Axis 1 (Left Stick Y-Axis, Joystick 0 Y-Axis) with Value 1.00")
